Correct alignment of page header on desktop and mobile, with and without an avatar.

--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -3,12 +3,17 @@
     top: 2.7rem;
     height: 3.4rem;
     background-color: white;
-    padding-top: .5rem;
     margin-bottom: .5rem;
     z-index: var(--zindex-page-header);
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
                 0 1px 10px 0 rgba(0, 0, 0, .12),
                 0 2px 4px -1px rgba(0, 0, 0, .2);
+}
+
+@media only screen and (max-width: 575px) {
+    #page-header {
+        padding-top: .3rem;
+    }
 }
 
 #page-header .panel {
@@ -23,6 +28,7 @@
 
 #page-header H2 {
     margin-left: .3em;
+    line-height: 1.6;
 }
 
 #page-header H2 .avatar-link {
@@ -41,4 +47,5 @@
 
 #page-header .react-datepicker-wrapper {
     margin-bottom: .5rem;
+
 }
